RESOLVED FIXED190476
Clicking on bookmarklet crashes at NavigationState::willRecordNavigationSnapshot
https://bugs.webkit.org/show_bug.cgi?id=190476
Summary Clicking on bookmarklet crashes at NavigationState::willRecordNavigationSnapshot
Tim Horton
Reported 2018-10-11 12:29:52 PDT
Clicking on bookmarklet crashes at NavigationState::willRecordNavigationSnapshot
Attachments
Patch (3.03 KB, patch)
2018-10-11 12:30 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2018-10-11 12:30:59 PDT
Tim Horton
Comment 2 2018-10-11 12:31:15 PDT
WebKit Commit Bot
Comment 3 2018-10-11 16:48:27 PDT
Comment on attachment 352065 [details] Patch Clearing flags on attachment: 352065 Committed r237055: <https://trac.webkit.org/changeset/237055>
WebKit Commit Bot
Comment 4 2018-10-11 16:48:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.